# e-mission-common

./: .gitignore  README.md  carbon_calculations.py  compile_to_js.sh  index.js  logger.py  logger.ts  package.json  pyproject.toml  requirements.txt  tsconfig.json
__js__/: __init__.js  __init__.project  logger.js  metrics.active_travel.active_travel_calculations.js  metrics.active_travel.standard_met_mode_map.js  metrics.carbon.carbon_calculations.js  org.transcrypt.__runtime__.js
emcommon/: __init__.py  index.py  util.py
emcommon_js/: .js  emcommon.bluetooth.ble_matching.js  emcommon.diary.base_mode_colors.js  emcommon.diary.base_modes.js  emcommon.logger.js  emcommon.metrics.active_travel.active_travel_calculations.js  emcommon.metrics.active_travel.standard_met_mode_map.js  emcommon.metrics.carbon.carbon_calculations.js  emcommon.metrics.footprint.egrid.js  emcommon.metrics.footprint.egrid_carbon_by_year.js  emcommon.metrics.footprint.footprint_calculations.js  emcommon.metrics.footprint.ntd_data_by_year.js  emcommon.metrics.footprint.transit.js  emcommon.metrics.footprint.transit_calculations.js  emcommon.metrics.footprint.util.js  emcommon.metrics.footprint_calculations.js  emcommon.metrics.metrics_summaries.js  emcommon.metrics.surveys.surveys_summary.js  emcommon.survey.conditional_surveys.js  emcommon.util.js  index.js  index.project  logger.js  metrics.active_travel.active_travel_calculations.js  metrics.active_travel.standard_met_mode_map.js  metrics.carbon.carbon_calculations.js  metrics.metrics_summaries.js  metrics.surveys.surveys_summary.js  org.transcrypt.__runtime__.js  survey.conditional_surveys.js
emcommon_translated_js/: __init__.js  __init__.project  logger.js  metrics.active_travel.active_travel_calculations.js  metrics.active_travel.standard_met_mode_map.js  (+5 more)
(+84 files in other folders)
